# shatterstack

./: .gitignore  CREDITS  README.md  pyproject.toml  requirements.txt  run.py
.github/workflows/: main.yml
game/: play.py  sprites.py
menus/: main.py  settings.py
utils/: constants.py  preload.py  utils.py
